--- a/content/W13.html
+++ b/content/W13.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,13 +139,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solidworks drawing << <a href='Solidworks drawing.html'>Previous</a> <a href='Solidworks operation process.html'>Next</a> >> Solidworks operation process<br /><h1>Solidworks2021 installation configuration</h1>
-<p>How to download Solidworks?</p>
-<p>Teaching:<a href="https://youtu.be/0cbrksHL9s8">https://youtu.be/0cbrksHL9s8</a></p>
-<p></p>
-<p><span></span></p>
-<p><span style="color: #0000ff;"></span></p>
-<br />Solidworks drawing << <a href='Solidworks drawing.html'>Previous</a> <a href='Solidworks operation process.html'>Next</a> >> Solidworks operation process</div>
+    <div id="tipue_search_content">W11 inspection << <a href='W11 inspection.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W13</h1>
+<p><span>零件進度</span></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span></p>
+<br />W11 inspection << <a href='W11 inspection.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
