--- a/content/W11 inspection-1.html
+++ b/content/W11 inspection-1.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,14 +139,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Task1.html'>Next</a> >> Task1<br /><h1>about</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">In this semester's computer-aided design internship, each student is required to create a personal homework warehouse and web page according to the format of this HW template.</span></span></p>
-<hr/>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40871106</span></span></span></span></span></span></span></span></span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website storage: </span></span><a href="https://github.com/40871106/cad2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/40871106/cad2021_hw</span></span></a></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website link: </span></span><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://40871106.github.io/cad2021_hw/content/index.html</span></span></a></p>
+    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>W11 inspection-1</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Parts download(SW) :  </span></span><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">link</span></span></a></p>
 <p></p>
-<br /> <a href='Task1.html'>Next</a> >> Task1</div>
+<p><span mce-data-marked="1">Design and draw link structure : </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/6QKRgmcmLns" title="YouTube video player" width="1280"></iframe></p>
+<p></p>
+<p><span mce-data-marked="1">Assembly link : </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/VzYvOpYzo7E" title="YouTube video player" width="1280"></iframe></p>
+<p></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">SW transfer to CoppeliaSim : </span></span></span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/lUdV9gE4f3c" title="YouTube video player" width="1280"></iframe></p>
+<p></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Simplified couple : </span></span></span><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/cnRl8fwj8VY" title="YouTube video player" width="1280"></iframe></span></span></span></p>
+<br />W11 << <a href='W11.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
         
     <!-- footer -->
       <div class="container">
