--- a/content/3senser.html
+++ b/content/3senser.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,14 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Task1.html'>Next</a> >> Task1<br /><h1>about</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">In this semester's computer-aided design internship, each student is required to create a personal homework warehouse and web page according to the format of this HW template.</span></span></p>
-<hr/>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40871106</span></span></span></span></span></span></span></span></span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website storage: </span></span><a href="https://github.com/40871106/cad2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/40871106/cad2021_hw</span></span></a></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website link: </span></span><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://40871106.github.io/cad2021_hw/content/index.html</span></span></a></p>
-<p></p>
-<br /> <a href='Task1.html'>Next</a> >> Task1</div>
+    <div id="tipue_search_content">1senser << <a href='1senser.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>3senser</h1>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span>wink</p>
+<br />1senser << <a href='1senser.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
