--- a/content/Solidworks2021 installation and configuration.html
+++ b/content/Solidworks2021 installation and configuration.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 inspection-1.html'>W11 inspection-1</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='W11 inspection-2.html'>W11 inspection-2</a><li><a href='1senser.html'>1senser</a><li><a href='3senser.html'>3senser</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task 1.html'>Task 1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 check.html'>W11 check</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation and configuration.html'>Solidworks2021 installation and configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solve space drawing.html'>Solve space drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace calculation process.html'>Solvspace calculation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='schedule.html'>schedule</a><li><a href='H2.html'>H2</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,9 +139,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">1senser << <a href='1senser.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>3senser</h1>
-<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span>wink</p>
-<br />1senser << <a href='1senser.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+    <div id="tipue_search_content">Solidworks drawing << <a href='Solidworks drawing.html'>Previous</a> <a href='Solidworks operation process.html'>Next</a> >> Solidworks operation process<br /><h1>Solidworks2021 installation and configuration</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">How to download Solidworks?</span></span></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Teaching: </span></span></span><a href="https://youtu.be/0cbrksHL9s8"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HTTPS</span></span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> : </span></span></span></span><a href="https://youtu.be/0cbrksHL9s8"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">//youtu.be/0cbrksHL9s8</span></span></span></span></a></p>
+<p></p>
+<p><span></span></p>
+<p><span style="color: #0000ff;"></span></p>
+<br />Solidworks drawing << <a href='Solidworks drawing.html'>Previous</a> <a href='Solidworks operation process.html'>Next</a> >> Solidworks operation process</div>
         
     <!-- footer -->
       <div class="container">
