--- a/content/schedule.html
+++ b/content/schedule.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 inspection-1.html'>W11 inspection-1</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='W11 inspection-2.html'>W11 inspection-2</a><li><a href='1senser.html'>1senser</a><li><a href='3senser.html'>3senser</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task 1.html'>Task 1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 check.html'>W11 check</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation and configuration.html'>Solidworks2021 installation and configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solve space drawing.html'>Solve space drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace calculation process.html'>Solvspace calculation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='schedule.html'>schedule</a><li><a href='H2.html'>H2</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,9 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='1senser.html'>Next</a> >> 1senser<br /><h1>W11 inspection-2</h1>
-<p><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Parts progress</span></span></span></p>
-<br />W13 << <a href='W13.html'>Previous</a> <a href='1senser.html'>Next</a> >> 1senser</div>
+    <div id="tipue_search_content">Sports scene << <a href='Sports scene.html'>Previous</a> <a href='H2.html'>Next</a> >> H2<br /><h1>schedule</h1>
+<br />Sports scene << <a href='Sports scene.html'>Previous</a> <a href='H2.html'>Next</a> >> H2</div>
         
     <!-- footer -->
       <div class="container">
