--- a/content/Wink.html
+++ b/content/Wink.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,13 +139,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solidworks drawing << <a href='Solidworks drawing.html'>Previous</a> <a href='Solidworks operation process.html'>Next</a> >> Solidworks operation process<br /><h1>Solidworks2021 installation and configuration</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">How to download Solidworks?</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Teaching: </span></span></span><a href="https://youtu.be/0cbrksHL9s8"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HTTPS</span></span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> : </span></span></span></span><a href="https://youtu.be/0cbrksHL9s8"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">//youtu.be/0cbrksHL9s8</span></span></span></span></a></p>
+    <div id="tipue_search_content">Task 1 << <a href='Task 1.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>Wink</h1>
+<p>此為wink需要的指令</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;script&gt;
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+&lt;/script&gt;</pre>
+<p>此為wink的jave script必須放進網頁的代碼裡才可以<br/><br/></p>
 <p></p>
-<p><span></span></p>
-<p><span style="color: #0000ff;"></span></p>
-<br />Solidworks drawing << <a href='Solidworks drawing.html'>Previous</a> <a href='Solidworks operation process.html'>Next</a> >> Solidworks operation process</div>
+<br />Task 1 << <a href='Task 1.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
       <div class="container">
