--- a/content/Wink.html
+++ b/content/Wink.html
@@ -140,18 +140,18 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Task 1 << <a href='Task 1.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>Wink</h1>
-<p>此為wink需要的指令</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;script&gt;
-var winkVideoData = {
-dataVersion: 1,
-frameRate: 20,
-buttonFrameLength: 10,
-buttonFrameOffset: 5,
-frameStops: {
-},
-};
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">This is the command needed by wink</span></span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;script&gt;<span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
+var winkVideoData = {</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
+dataVersion: 1,</span></span><span></span>
+frameRate: 20,<span></span>
+buttonFrameLength: 10,<span></span>
+buttonFrameOffset: 5,<span></span>
+frameStops: {<span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
+},</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
+};</span></span><span></span>
 &lt;/script&gt;</pre>
-<p>此為wink的jave script必須放進網頁的代碼裡才可以<br/><br/></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">This is wink's jave script must be put in the code of the webpage.</span></span><br/><br/></p>
 <p></p>
 <br />Task 1 << <a href='Task 1.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
