--- a/content/Final project.html
+++ b/content/Final project.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task 1.html'>Task 1</a><li><a href='Wink.html'>Wink</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 check.html'>W11 check</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation and configuration.html'>Solidworks2021 installation and configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solve space drawing.html'>Solve space drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace calculation process.html'>Solvspace calculation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='schedule.html'>schedule</a><li><a href='H2.html'>H2</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task 1.html'>Task 1</a><li><a href='Wink.html'>Wink</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 check.html'>W11 check</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation and configuration.html'>Solidworks2021 installation and configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solve space drawing.html'>Solve space drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace calculation process.html'>Solvspace calculation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='schedule.html'>schedule</a><li><a href='H2.html'>H2</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final project.html'>Final project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,18 +139,18 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <br /><h1>最終項目</h1>
-<p>meArm零件繪製</p>
-<p><a href="https://drive.google.com/drive/folders/18aoRvBHjy85amZyCZJLEyC8K24GAmsfQ?usp=sharing">meArm零件下載連結</a></p>
-<p>四連桿機構零件繪製</p>
-<p><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6">零件下載連結</a></p>
-<p>零件繪製影片</p>
+    <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <br /><h1>Final project</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">meArm part drawing。</span></span></p>
+<p><a href="https://drive.google.com/drive/folders/18aoRvBHjy85amZyCZJLEyC8K24GAmsfQ?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">meArm parts download link</span></span></a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Four-bar linkage part drawing</span></span></p>
+<p><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part download link</span></span></a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part drawing video</span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/6QKRgmcmLns" title="YouTube video player" width="1280"></iframe></p>
-<p>coppeliaSim模擬影片</p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">coppeliaSim simulation video</span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/cnRl8fwj8VY" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p>八連桿機構零件繪製</p>
-<p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">零件下載連結</a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Drawing of parts of eight-bar linkage mechanism</span></span></p>
+<p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part download link</span></span></span></span></span></span></a></p>
 <p><img alt="" height="786" src="./../images/1641296379463.jpg" width="1564"/></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p><br />HW3 << <a href='HW3.html'>Previous</a> </div>
         
