--- a/content/Final project.html
+++ b/content/Final project.html
@@ -140,7 +140,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <br /><h1>Final project</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">meArm part drawing。</span></span></p>
+<p>Solidwork安裝與配置 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/0cbrksHL9s8" title="YouTube video player" width="1280"></iframe></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">meArm part drawing</span></span></p>
 <p><a href="https://drive.google.com/drive/folders/18aoRvBHjy85amZyCZJLEyC8K24GAmsfQ?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">meArm parts download link</span></span></a></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Four-bar linkage part drawing</span></span></p>
 <p><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part download link</span></span></a></p>
@@ -150,7 +152,7 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/cnRl8fwj8VY" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Drawing of parts of eight-bar linkage mechanism</span></span></p>
-<p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part download link</span></span></span></span></span></span></a></p>
+<p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part download link</span></span></span></span></span></span></span></span></a></p>
 <p><img alt="" height="786" src="./../images/1641296379463.jpg" width="1564"/></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p><br />HW3 << <a href='HW3.html'>Previous</a> </div>
         
