Jansen linkage web edit & some video

--- a/content/Jansens linkage.html
+++ b/content/Jansens linkage.html
@@ -139,39 +139,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <br /><h1>Final project</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solidwork installation and configuration </span></span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/0cbrksHL9s8" title="YouTube video player" width="1280"></iframe></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">use Solidworks :</span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/gtpOX4krs4E" title="YouTube video player" width="1280"></iframe></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">download Solvespace :</span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/WA30mcUVi6w" title="YouTube video player" width="1280"></iframe></p>
-<p>Use Solvespace :</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/ksTnyrjiz_c" title="YouTube video player" width="1280"></iframe></p>
-<p></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span>--------------------------------------------------------------------------------------------------------</p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">meArm part drawing</span></span></p>
-<p><a href="https://drive.google.com/drive/folders/18aoRvBHjy85amZyCZJLEyC8K24GAmsfQ?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">meArm parts download link</span></span></a></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p>
-<p><a href="https://drive.google.com/drive/folders/1lGdDWGL1IsILPw1rT1kgYN8SG8mbxTOD?usp=sharing">meArm 模擬場景</a></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span>meArm simulation</span></span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/gFrIo2yajHU" title="YouTube video player" width="1280"></iframe></p>
-<p>--------------------------------------------------------------------------------------------------------</p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Four-bar linkage part drawing</span></span></p>
-<p><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part download link</span></span></a></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part drawing video</span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/6QKRgmcmLns" title="YouTube video player" width="1280"></iframe></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">coppeliaSim simulation video</span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/cnRl8fwj8VY" title="YouTube video player" width="1280"></iframe></p>
-<p>--------------------------------------------------------------------------------------------------------</p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Drawing of parts of eight-bar linkage mechanism</span></span></p>
-<p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Part download link</span></span></span></span></span></span></span></span></span></span></span></span></a></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">8 links introduce :</span></span></span></span></span></span></span></span></span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/TA3XaQPrq4E" title="YouTube video player" width="1280"></iframe></p>
-<p></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">8 links simulation video :</span></span></span></span></span></span></span></span></span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/ASjyvQMGZ5k" title="YouTube video player" width="1280"></iframe></p>
-<p></p><br />HW3 << <a href='HW3.html'>Previous</a> </div>
+    <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='Task 1.html'>Next</a> >> Task 1<br /><h1>Jansens linkage</h1>
+<p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Soildworks 零件下載</a>(含延伸題)</p>
+<p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Solisworks 組合下載</a>(含延伸題)</p>
+<p><span><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">CoppeliaSim 場景檔下載</a>(含延伸題)</span></p>
+<p>從屬關係配置 :</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/uEwlBwSy7oc" title="YouTube video player" width="1280"></iframe></p>
+<p>dummy配置 :</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/FijDhxp8htA" title="YouTube video player" width="1280"></iframe></p>
+<p>動態模擬 :</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/dZHWUudrvyQ" title="YouTube video player" width="1280"></iframe></p>
+<p>IU介面設置模擬 :</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/cDNcby2-bAg" title="YouTube video player" width="1280"></iframe></p>
+<br />about << <a href='about.html'>Previous</a> <a href='Task 1.html'>Next</a> >> Task 1</div>
         
     <!-- footer -->
       <div class="container">
