--- a/content/Jansens linkage.html
+++ b/content/Jansens linkage.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Jansens linkage.html'>Jansens linkage</a><li><a href='Task 1.html'>Task 1</a><li><a href='Wink.html'>Wink</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 check.html'>W11 check</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation and configuration.html'>Solidworks2021 installation and configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solve space drawing.html'>Solve space drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace calculation process.html'>Solvspace calculation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='schedule.html'>schedule</a><li><a href='H2.html'>H2</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final project.html'>Final project</a></li>
+                     <li><a href='about.html'>about</a><li><a href='期末考試.html'>期末考試</a><li><a href='Jansens linkage.html'>Jansens linkage</a><li><a href='Task 1.html'>Task 1</a><li><a href='Wink.html'>Wink</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 check.html'>W11 check</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation and configuration.html'>Solidworks2021 installation and configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solve space drawing.html'>Solve space drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace calculation process.html'>Solvspace calculation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='schedule.html'>schedule</a><li><a href='H2.html'>H2</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final project.html'>Final project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='Task 1.html'>Next</a> >> Task 1<br /><h1>Jansens linkage</h1>
+    <div id="tipue_search_content">期末考試 << <a href='期末考試.html'>Previous</a> <a href='Task 1.html'>Next</a> >> Task 1<br /><h1>Jansens linkage</h1>
 <p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Soildworks 零件下載</a>(含延伸題)</p>
 <p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Solisworks 組合下載</a>(含延伸題)</p>
 <p><span><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">CoppeliaSim 場景檔下載</a>(含延伸題)</span></p>
@@ -151,7 +151,7 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/dZHWUudrvyQ" title="YouTube video player" width="1280"></iframe></p>
 <p>IU介面設置模擬 :</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/cDNcby2-bAg" title="YouTube video player" width="1280"></iframe></p>
-<br />about << <a href='about.html'>Previous</a> <a href='Task 1.html'>Next</a> >> Task 1</div>
+<br />期末考試 << <a href='期末考試.html'>Previous</a> <a href='Task 1.html'>Next</a> >> Task 1</div>
         
     <!-- footer -->
       <div class="container">
