--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,11 +139,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">schedule << <a href='schedule.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1<br /><h1>H2</h1>
-<p><a href="https://drive.google.com/drive/folders/18aoRvBHjy85amZyCZJLEyC8K24GAmsfQ?usp=sharing">零件進度100%(download) </a></p>
-<p>1軸</p>
-<p>3軸</p>
-<br />schedule << <a href='schedule.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
+    <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage<br /><h1>期末考試</h1>
+<p>第一階段</p>
+<p>maArm單一零件檔案連結(Solidworks)</p>
+<p>maArm零件組立檔案連結(Solidworks)</p>
+<p>(影片呈現單一零件與組立)</p>
+<p></p>
+<br />about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage</div>
         
     <!-- footer -->
       <div class="container">
