--- a/config/content.htm
+++ b/config/content.htm
@@ -6,9 +6,10 @@
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Web Links: </span></span></span></span></span></span><span style="vertical-align: inherit;"><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HTTPS</span></span></span></span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> : </span></span></span></span></span></span><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">//40871106.github.io/cad2021_hw/content/index.html</span></span></span></span></span></span></a></p>
 <h1>期末考試</h1>
 <p>第一階段</p>
-<p>maArm單一零件連結(Solidworks)</p>
-<p>(影片呈現零件)</p>
-<p><span>maArm零件組合檔連結(Solidworks)</span></p>
+<p>maArm單一零件檔案連結(Solidworks)</p>
+<p>maArm零件組立檔案連結(Solidworks)</p>
+<p>(影片呈現單一零件與組立)</p>
+<p></p>
 <h1>Jansens linkage</h1>
 <p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Soildworks 零件下載</a>(含延伸題)</p>
 <p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Solisworks 組合下載</a>(含延伸題)</p>
